Steamworks fixes, cross-platform fixes
made steamworks run its own process, so it can be killed and revived around the game, fixing the issue that stopped the game from launching.
had to make linux detect steam, as steamworks needs access to steam.
and other things that made my head hurt